--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-pxtorem": "^4.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-wxlogin": "^1.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
