--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.13.0",
     "js-md5": "^0.7.3",
     "postcss-pxtorem": "^4.0.1",
+    "qrcode": "^1.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-wxlogin": "^1.0.1",
