--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.13.0",
+    "js-base64": "^2.5.1",
     "js-md5": "^0.7.3",
     "postcss-pxtorem": "^4.0.1",
     "qrcode": "^1.4.4",
