--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://www.lvshilaile.com'
+VUE_APP_BASE_API = 'https://interface.lvshilaile.com'
