--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://www.lvshilaile.com'
+VUE_APP_BASE_API = 'https://interface.lvshilaile.com'
 
